chore: remove .claude, CLAUDE.md, and prompts from version control
Remove Claude Code configuration files and prompts from remote repository
while keeping them locally for development use.

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,8 @@ coordination/orchestration/*
 claude-flow
 # Removed Windows wrapper files per user request
 hive-mind-prompt-*.txt
+
+# Claude Code configuration and prompts (local only)
+.claude/
+CLAUDE.md
+prompts/
