feat: add Google Colab training notebooks and comprehensive model comparison
- Add Kepler_Complete_Training_Colab_2025.ipynb: Production-ready Colab notebook with Genesis CNN, XGBoost, Random Forest
- Add COLAB_QUICK_START_2025.md: Comprehensive usage guide with troubleshooting for 2025
- Add train_all_models_kaggle.py: Local training script with all 3 models and SMOTE balancing
- Fix fast_download_kepler_data.py: Variable naming bug (time → lc_time), add AWS S3 support
- Add Kaggle dataset documentation and automated setup scripts
- Update .gitignore: Exclude virtual environments, large datasets, and training logs

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,16 @@ hive-mind-prompt-*.txt
 CLAUDE.md
 prompts/claude-commands.md
 README_UPGRADE.md
+
+# Virtual environments (WSL/Windows)
+venv_gpu/
+wsl_venv/
+
+# Large dataset files
+data/kaggle_kepler/
+data/cached_lightcurves/*.npy
+
+# Training logs
+training_log.txt
+training_log_venv.txt
+download_log.txt
